--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "pandas>=2.3.1",
     "polars>=1.32.3",
+    "scikit-learn>=1.7.1",
+    "torch>=2.8.0",
     "tqdm>=4.67.1",
+    "transformers>=4.55.2",
 ]
