Add paperscraper notebook for downloading and saving PDFs
- Implemented functionality to download PDFs from BiorXiv using DOI.
- Added error handling for forbidden access and fallback to PMC XML downloads.
- Included example usage of `save_pdf` and `save_pdf_from_dump` functions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,22 @@
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": false,
-    "python.defaultInterpreterPath": "./.venv/Scripts/python.exe",
+    //"python.defaultInterpreterPath": "./.venv/Scripts/python.exe",
     "python.terminal.activateEnvironment": true,
     "files.exclude": {
         "**/__pycache__": true,
         "**/*.pyc": true
     },
-    "mypy-type-checker.enable": false
+    "mypy-type-checker.enable": false,
+    "[python]": {
+        "editor.defaultFormatter": "charliermarsh.ruff",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit",
+            "source.fixAll.ruff": "explicit"
+        }
+    },
+    "ruff.enable": true,
+    "ruff.organizeImports": true,
+    "ruff.fixAll": true
 }
