--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.30.1",
     "jupyter>=1.1.1",
+    "nltk>=3.9.1",
     "pandas>=2.3.1",
     "paperscraper>=0.3.2",
     "polars>=1.32.3",
