--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.30.1",
     "jupyter>=1.1.1",
+    "matplotlib>=3.10.5",
     "nltk>=3.9.1",
     "pandas>=2.3.1",
     "paperscraper>=0.3.2",
     "polars>=1.32.3",
+    "pyyaml>=6.0.1",
     "scikit-learn>=1.7.1",
+    "seaborn>=0.13.2",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.55.2",
